# inference

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Specification.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  build_main.yml  build_pr.yml  build_release.yml  coverage.yml  publish-inf-wasmparser.yml  publish-inf-wast.yml  publish-wat-fmt.yml  reusable-build.yml
analyser/: Cargo.toml
analyser/src/: main.rs
apps/infs/: Cargo.toml  README.md
apps/infs/src/: main.rs
apps/infs/src/commands/: build.rs  default.rs  doctor.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  self_cmd.rs  uninstall.rs  version.rs
apps/infs/src/project/: manifest.rs  mod.rs  scaffold.rs  templates.rs
apps/infs/src/toolchain/: download.rs  manifest.rs  mod.rs  paths.rs  platform.rs  verify.rs
apps/infs/src/tui/: app.rs  mod.rs  terminal.rs
apps/infs/tests/: cli_integration.rs
ast/: Cargo.toml
ast/src/: arena.rs  builder.rs  lib.rs  node.rs  nodes.rs  nodes_impl.rs  symbols.rs  t_ast.rs  type_infer.rs  type_info.rs  types.rs  types_impl.rs
book/: check_deps.sh  installation_linux.md  installation_macos.md  installation_windows.md
cli/: Cargo.toml
cli/src/: main.rs  parser.rs
core/ast/: Cargo.toml  README.md
core/ast/docs/: architecture.md  nodes.md
core/ast/src/: _node.rs  arena.rs  ast.rs  builder.rs  enums_impl.rs  extern_prelude.rs  lib.rs  nodes.rs  nodes_impl.rs  parser_context.rs  t_ast.rs  type_infer.rs  type_inference.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs  parser.rs
core/cli/tests/: cli_integration.rs
core/hir/: Cargo.toml
core/hir/src/: _type_inference.rs  arena.rs  hir.rs  lib.rs  nodes.rs  nodes_impl.rs  symbol_table.rs  type_infer.rs  type_info.rs
core/inference/: Cargo.toml
core/inference/src/: lib.rs
core/parser/: Cargo.toml  SCALE_ANALYSIS.md
core/parser/src/: error.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs  token_kind_bridge.rs
core/parser/src/grammar/: attributes.rs  expressions.rs  items.rs  patterns.rs  types.rs
core/parser/tests/: comprehensive_tests.rs  parser_api.rs  parser_tests.rs
core/semantic-analysis/: Cargo.toml
core/semantic-analysis/src/: diagnostics.rs  errors.rs  lib.rs
core/type-checker/: Cargo.toml  README.md
core/type-checker/docs/: architecture.md  type-system.md
core/type-checker/src/: errors.rs  extern_prelude.rs  lib.rs  symbol_table.rs  symbol_table_v2.rs  type_checker.rs  type_info.rs  typed_context.rs
core/type-checker/tests/: type_info_tests.rs
core/wasm-codegen/: Cargo.toml  build.rs
core/wasm-codegen/src/: compiler.rs  lib.rs  utils.rs
core/wasm-to-v/: Cargo.toml  README.md
core/wasm-to-v/src/: lib.rs  translator.rs  wasm_parser.rs
editors/vscode/: QA_GUIDE.md  README.md  package.json
editors/vscode/src/: extension.ts
editors/vscode/test/: grammar.test.ts  language-config.test.ts
infc/: Cargo.toml
infc/src/: main.rs
infc_compiler/: Cargo.toml
infc_compiler/src/: lib.rs
infc_compiler/src/ast/: builder.rs  types.rs  types_impl.rs
inference/: Cargo.toml
inference/examples/: Cargo.toml
inference/examples/src/: lib.rs
inference/src/: lib.rs
inference/src/compiler/: Cargo.toml
inference/src/compiler/samples/: audio_bg.wasm  example.inf  test_wasm_to_coq.v
inference/src/compiler/src/: main.rs  main_tests.rs
inference/src/compiler/src/ast/: builder.rs  builder_tests.rs  mod.rs  types.rs  types_impl.rs
inference/src/compiler/src/cli/: parser.rs
inference/src/compiler/src/rust_to_wasm_compiler/: mod.rs  wasm_pack_helper.rs
inference/src/compiler/src/wasm_codegen/: mod.rs  tests.rs  wat_generator.rs
inference/src/compiler/src/wasm_to_coq_translator/: mod.rs  translator.rs  wasm_parser.rs
inference/src/inference-documentation/src/: docstrings_grabber.rs  lib.rs  main.rs
inference/src/inference-proc-macros/: Cargo.toml
inference/src/inference-proc-macros/src/: lib.rs
inference/src/inference-std/: Cargo.toml
inference/src/inference-std/src/: address.rs  context.rs  lib.rs  nat.rs
playground-server/: Cargo.toml
playground-server/src/: main.rs
test_data/rust/: lib.rs
test_data/wasm/: add_uzumaki_test.wasm
tests/: COVERAGE_PROGRESS.md  Cargo.toml  wat_generator_tests.rs
tests/src/: lib.rs  semantic_analysis.rs  utils.rs
tests/src/ast/: README.md  arena.rs  mod.rs  (+9 more)
tools/inf-wasmparser/: Cargo.toml  README.md
tools/inf-wasmparser/benches/: benchmark.rs
tools/inf-wasmparser/examples/: simple.rs
tools/inf-wasmparser/src/: arity.rs  binary_reader.rs  lib.rs  limits.rs  parser.rs  validator.rs
tools/inf-wasmparser/src/collections/index_map/: detail.rs  tests.rs
tools/inf-wasmparser/src/readers/component/: imports.rs  instances.rs  types.rs
tools/inf-wasmparser/src/readers/core/: coredumps.rs  elements.rs  operators.rs  producers.rs  types.rs
tools/inf-wasmparser/src/validator/: component.rs  component_types.rs  core.rs  func.rs  names.rs  operators.rs  types.rs
tools/inf-wasmparser/src/validator/core/: canonical.rs
tools/inf-wasmparser/tests/: big-module.rs  inference-blocks.rs  uzumaki.rs
tools/inf-wast/: Cargo.toml  README.md
tools/inf-wast/src/: encode.rs  lexer.rs  lib.rs  names.rs  parser.rs  token.rs
tools/inf-wast/src/component/: binary.rs  expand.rs  resolve.rs
tools/inf-wast/src/core/: binary.rs  expr.rs
tools/inf-wast/src/core/resolve/: names.rs  types.rs
tools/inf-wast/tests/: annotations.rs  comments.rs  inference-blocks.rs  recursive.rs  uzumaki.rs
tools/playground-server/: Cargo.toml
tools/playground-server/src/: main.rs
tools/wasm-fmt/: Cargo.toml
tools/wat-fmt/: Cargo.toml  README.md  wasm-pack.toml
tools/wat-fmt/src/: lib.rs
wasm-codegen/: Cargo.toml
wasm-codegen/src/: lib.rs  module.rs
wasm-coq-translator/: Cargo.toml
wasm-coq-translator/src/: translator.rs  wasm_parser.rs
wasm-fmt/src/: lib.rs
wasm-v-translator/: Cargo.toml
wasm-v-translator/src/: translator.rs  wasm_parser.rs
wat-codegen/: Cargo.toml
wat-codegen/src/: lib.rs  wat_emitter.rs  wat_generator.rs
wat-fmt/src/: lib.rs
(+47 files in other folders)
