[workspace]

resolver = "2"

members = [
    "ast",
    "cli",
    "wasm-coq-translator",
    "wat-codegen",
    "inference",
    "tests",
    "playground-server",
]

exclude = ["riscv-runtime"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
homepage = "https://inferara.com"
repository = "https://github.com/Inferara/inference"

[workspace.dependencies]
inference = { path = "./inference", version = "0.0.1" }
inference-ast = { path = "./ast", version = "0.0.1" }
inference-cli = { path = "./cli", version = "0.0.1" }
inference-wasm-coq-translator = { path = "./wasm-coq-translator", version = "0.0.1" }
inference-wat-codegen = { path = "./wat-codegen", version = "0.0.1" }
inference-tests = { path = "./tests", version = "0.0.1" }
inference-playground-server = { path = "./playground-server", version = "0.0.1" }
tree-sitter = ">=0.22.6"
tree-sitter-inference = "0.0.28"
