[workspace]

resolver = "2"

members = [
    "core/*",
    "tools/*",
    "tests"
]

[workspace.package]
version = "0.0.1"
rust-version = "1.91"
edition = "2024"
license = "GPL-3.0"
homepage = "https://inferara.com"
repository = "https://github.com/Inferara/inference"

[workspace.dependencies]
# Core Inference crates
inference = { path = "./core/inference", version = "0.0.1" }
inference-ast = { path = "./core/ast", version = "0.0.1" }
inference-cli = { path = "./core/cli", version = "0.0.1" }
inference-wasm-codegen = { path = "./core/wasm-codegen", version = "0.0.1" }

inference-tests = { path = "./tests", version = "0.0.1" }

# Various supplementary tools
inference-playground-server = { path = "./tools/playground-server", version = "0.0.1" }
wasm-fmt = { path = "./tools/wasm-fmt", version = "0.0.1" }

inf-wast = "0.0.8"
inf-wasmparser = "0.0.8"
wat-fmt = "0.0.8"
tree-sitter = "0.25.10"
tree-sitter-inference = "0.0.37"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive", "rc"] }
