[package]
name = "inference-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
walkdir = "2.5.0"
tempfile = "3.19.1"
anyhow.workspace = true
inference.workspace = true
