[package]
name = "inference-ast"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
uuid = { version = "1.1", features = ["v4"] }
rustc-hash.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-inference.workspace = true
anyhow.workspace = true
