[package]
name = "inference-semantic-analysis"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inference-ast.workspace = true
inference-type-checker.workspace = true
anyhow.workspace = true
thiserror.workspace = true
[dev-dependencies]
tree-sitter.workspace = true
tree-sitter-inference.workspace = true
