[package]
name = "inference-wasm-codegen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inkwell = { version = "0.7.1", features = ["llvm21-1"] }
wasm-encoder="0.243.0"
inference-ast.workspace = true
anyhow.workspace = true
