[package]
name = "inference-playground-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde_json = "1.0"
inference.workspace = true
inf-wast.workspace = true
wat-fmt.workspace = true
wasm-fmt.workspace = true
serde.workspace = true
