[package]
name = "wat-fmt"
version = "0.0.9"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A pretty formatter for WebAssembly Text Format"

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true }

[profile.release]
opt-level = "s"
panic = "abort"

[features]
wasm = ["wasm-bindgen"]

# [lib]
# crate-type = ["cdylib"]
