[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = ">=0.22.6"
tree-sitter-inference = "0.0.20"
wasmparser = "0.214.0"
anyhow = "1.0.44"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]